[package]
name = "demostf-frontend"
version = "1.0.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.22.0"
opentelemetry = { version = "0.21.0" }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tls"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
sqlx = { version = "0.7.4", features = ["postgres", "time", "runtime-tokio-rustls"] }
sea-query = { version = "0.30.7", features = ["backend-postgres", "with-time", "derive"] }
sea-query-binder = { version = "0.5.0", features = ["with-time", "sqlx-postgres"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
config = { version = "0.13.4", features = ["toml"] }
time = "0.3.34"
maud = { version = "0.25.0", features = ["axum"] }
axum = { version = "0.6.20", features = ["headers", "macros"] }
hyper = "0.14.28"
hyperlocal = "0.8.0"
tower-http = { version = "0.4.4", features = ["trace", "fs"] }
steamid-ng = "1.0.0"
itertools = "0.12.1"
const-fnv1a-hash = "1.1.0"
const_base = "0.2.0"
const-str = "0.5.7"
steam-openid = "0.2.0"
async-session = "3.0.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
reqwest = "0.11.27"
rand = "0.8.5"
demostf-build = { path = "./build", version = "*" }
include_dir = "0.7.3"
serde-env = "0.1.1"
tonic = { version = "0.9.2", features = ["tls", "tls-webpki-roots"] }
secretfile = "0.1.0"
