[package]
name = "demostf-frontend"
version = "1.0.1"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.29.0"
opentelemetry = { version = "0.28.0" }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28.0", features = ["tls", "grpc-tonic"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "time", "runtime-tokio-rustls"] }
sea-query = { version = "0.32.3", features = ["backend-postgres", "with-time", "derive"] }
sea-query-binder = { version = "0.7.0", features = ["with-time", "sqlx-postgres"] }
thiserror = "2.0.12"
tokio = { version = "1.38.0", features = ["full"] }
config = { version = "0.15.11", features = ["toml"] }
time = "0.3.36"
maud = { version = "0.27.0", features = ["axum"] }
axum = { version = "0.8.1", features = ["macros"] }
hyper = "1.3.1"
hyper-util = { version = "0.1.5", features = ["tokio", "server"] }
axum-extra = { version = "0.10.0", features = ["typed-header", "cookie"] }
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
steamid-ng = "1.0.0"
itertools = "0.14.0"
steam-openid = "0.2.0"
async-session = "3.0.0"
quick-xml = { version = "0.37.2", features = ["serialize"] }
reqwest = "0.12.4"
rand = "0.9.0"
demostf-build = { path = "./build", version = "*" }
include_dir = "0.7.3"
serde-env = "0.2.0"
tonic = { version = "0.12.3", features = ["tls", "tls-webpki-roots"] }
secretfile = "0.1.0"
